# darknet

./: .gitignore  Makefile
cfg/: yolo_1class.cfg  yolo_6classes.cfg
lib/: CMakeLists.txt  CMakeLists.txt.cpu_only  Makefile  config.h.in  object_detection.c  object_detection.cpp  object_detection.h  object_detection.hpp
lib/test/: .gitignore  CMakeLists.txt  Makefile  test.c  test.cpp
scripts/: divide_dataset.py  find_unannotated_image.py  fix_object_name.py  person_detection_label.py
src/: activations.h  data.c  image.c  yolo.c
